fix: pdf preview spacing

--- a/site/docs/stylesheets/preview.css
+++ b/site/docs/stylesheets/preview.css
@@ -40,7 +40,6 @@ All styles must use !important to override the styles generated by Material for 
 .preview__wrapper .preview__item {
   height: 100% !important;
   flex-shrink: 0 !important;
-  flex: 1 !important;
   display: flex !important;
   flex-direction: column !important;
   margin: 0 20px 20px 0 !important;
@@ -49,13 +48,16 @@ All styles must use !important to override the styles generated by Material for 
   align-items: start !important;
 }
 
+.preview__wrapper .preview__item-pseudo {
+  visibility: hidden !important;
+}
+
 .preview__wrapper .preview__item:last-child {
   margin-right: 0 !important;
 }
 
 .preview__item a.glightbox {
-  flex: 1 !important;
-  height: 90% !important;
+  height: 92% !important;
   display: block !important;
   margin: 0 !important;
   padding: 0 !important;
